# orcid-data-toolkit

./: Cargo.toml  README.md  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
benches/: tgz_processing.rs
samples/: 0000-0001-9235-7004.xml  0000-0002-0816-7126.xml  0000-0003-0500-3000.xml
src/: lib.rs  main.rs
tests/: integration_tests.rs
tests/data/: alex.xml  duplicate-orgs.xml  lars.xml  org-mapping.csv  paolo.xml
