[package]
name = "orcid-xml-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.30", features = ["serde"] }
csv = "1.2.2"
flate2 = { version = "1.0.27", features = ["zlib-ng"], default-features = false }
quick-xml = { version = "0.30.0", features = ["serde", "serialize"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_path_to_error = "0.1.16"
tar = "0.4.40"
uuid = { version = "1.4.1", features = ["fast-rng", "v4", "serde"] }
