[package]
name = "orcid-data-toolkit"
version = "0.1.0"
authors = ["Alex Ioannidis <a.ioannidis@cern.ch"]
description = """A CLI tool to work with the ORCiD Public Data file."""
documentation = "https://github.com/inveniosoftware/orcid-data-toolkit"
homepage = "https://github.com/inveniosoftware/orcid-data-toolkit"
repository = "https://github.com/inveniosoftware/orcid-data-toolkit"
categories = ["command-line-utilities", "orcid"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.30", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.2.2"
crossbeam-channel = "0.5"
flate2 = { version = "1.0.27", features = [
    "zlib-rs",
], default-features = false }
rayon = "1.10"
quick-xml = { version = "0.30.0", features = ["serde", "serialize"] }
regex = "1.11.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_path_to_error = "0.1.16"
tar = "0.4.40"
unicode-normalization = "0.1.24"
uuid = { version = "1.4.1", features = ["fast-rng", "v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5"
predicates = "3.1.2"

[[bench]]
name = "tgz_processing"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
